--- a/example-release/config/final.yml
+++ b/example-release/config/final.yml
@@ -3,4 +3,5 @@ blobstore:
   provider: s3
   options:
     bucket_name: example-release-blobs
+    endpoint: https://s3-us-west-1.amazonaws.com
 final_name: example-release
