--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.0"
+product_version: "1.4.0-alpha.2"
 metadata_version: "1.4"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
