Generate final release v3 of example-release
[#97137326]

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -8,4 +8,8 @@ builds:
     version: 47f988e189ebae8e5f83446ea4a8e2a974bd0d23
     sha1: 46cbd3d02177afd0eb7437c577a991d8714ad278
     blobstore_id: 7fc7339b-fe12-4777-ab59-95bad8afde2d
+  956d83fec2aa2c9f7df46ce5c5abd3fa31a83960:
+    version: 956d83fec2aa2c9f7df46ce5c5abd3fa31a83960
+    sha1: 319b62b1d296c94e484dda21b9b103f9ecb70b1e
+    blobstore_id: 090f31d6-e54b-4d93-9f0a-f27a412a8bfd
 format-version: '2'
