--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -4,4 +4,6 @@ builds:
     version: '1'
   751a6c64-92ac-4f63-959f-a81b4a318c4e:
     version: '2'
+  82cc054f-d7bd-4709-8421-0cd57b0fbd02:
+    version: '3'
 format-version: '2'
