--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -7,8 +7,9 @@ jobs:
   - task: generate-example-product
     privileged: true
     file: ops-manager-example/ci/tasks/generate-example-product.yml
-    params:
-      REPO_DIR: ops-manager-example
+    config:
+      params:
+        REPO_DIR: ops-manager-example
   - put: generated-example-product
     params:
       from: ops-manager-example/example-product/generated-example-product.pivotal
@@ -26,4 +27,4 @@ resources:
     versioned_file: example-product.pivotal
     access_key_id: {{concourse-artifacts-access-key}}
     secret_access_key: {{concourse-artifacts-secret-access-key}}
-    bucket: {{ pivotal-files-bucket }}
+    bucket: {{pivotal-files-bucket}}
