--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -6,4 +6,6 @@ builds:
     version: '2'
   82cc054f-d7bd-4709-8421-0cd57b0fbd02:
     version: '3'
+  fa018eb4-1edf-40e0-8363-f763765da328:
+    version: '4'
 format-version: '2'
