Cut final release 5
- includes example errand

--- a/example-release/releases/example-release/index.yml
+++ b/example-release/releases/example-release/index.yml
@@ -8,4 +8,6 @@ builds:
     version: '3'
   fa018eb4-1edf-40e0-8363-f763765da328:
     version: '4'
+  e8378900-e772-4661-bb34-0cfd1c07bb0a:
+    version: '5'
 format-version: '2'
