Add v6 for example release; use this in v1.4.0.0-alpha.6 of the example product [#98151176]

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -16,4 +16,8 @@ builds:
     version: f7167b6af2edec0565ee6ec36cc726259bc2e174
     sha1: c730ac948a138e793218424a8586c9e72774b726
     blobstore_id: 7ff3fe04-364f-4874-8206-c68aa326eb31
+  327334942a1fcf6d513589fb10cf78add8ec9ce3:
+    version: 327334942a1fcf6d513589fb10cf78add8ec9ce3
+    sha1: 6d9c908d1d5e32c4d49c1f93c1a3951e2489c5a8
+    blobstore_id: 86107c3b-3d41-42df-8870-2ebfe122d40f
 format-version: '2'
