Create final release v7 [#99455872]
Signed-off-by: Aram Price <aprice@pivotal.io>

--- a/example-release/.final_builds/jobs/web_server/index.yml
+++ b/example-release/.final_builds/jobs/web_server/index.yml
@@ -20,4 +20,8 @@ builds:
     version: 327334942a1fcf6d513589fb10cf78add8ec9ce3
     sha1: 6d9c908d1d5e32c4d49c1f93c1a3951e2489c5a8
     blobstore_id: 86107c3b-3d41-42df-8870-2ebfe122d40f
+  f6683b3d56ed8ba200108999286ab1cffbcd5a55:
+    version: f6683b3d56ed8ba200108999286ab1cffbcd5a55
+    sha1: 6436cd61d2277c594a46657d384abbcd9ed2dac4
+    blobstore_id: 85154e9c-3d1f-4fd6-bb0e-75074a502e3e
 format-version: '2'
