--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,10 +1,15 @@
 product: example-product
-installation_schema_version: "1.4"
-to_version: "1.4.1.0"
+installation_version: "1.4"
+to_version: "1.4.2.0"
 
 migrations:
   - from_version: "1.4.0.0"
     rules:
       - type: update
         selector: "product_version"
-        to: "1.4.1.0"
+        to: "1.4.2.0"
+  - from_version: "1.4.1.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: "1.4.2.0"
