--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -232,3 +232,117 @@ migrations:
       - type: update
         selector: "properties.[identifier=example_http_url].value"
         to: "http://migrated-value.com"
+  - from_version: "1.4.2.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: "1.5.0.0"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_string]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_integer]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_boolean]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_dropdown]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_domain]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_wildcard_domain]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_string_list]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_text]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_ldap_url]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_email]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_http_url]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_address]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_ip_ranges]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_multi_select_options]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address_list]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_network_address]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_port]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_smtp_authentication]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=example_collection]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_cert_credentials]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_rsa_pkey_credentials]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_salted_credentials]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_simple_credentials]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_secret]"
+        to: "properties"
+      - type: move
+        selector: ""
+        from: "jobs.[identifier=web_server].properties.[identifier=generated_uuid]"
+        to: "properties"
+      - type: "update"
+        selector: "properties.[identifier=example_integer].identifier"
+        to: "example_migrated_integer"
+      - type: update
+        selector: "jobs.[identifier=web_server].resources.[identifier=ram].value"
+        to: 2048
+      - type: update
+        selector: "properties.[identifier=example_http_url].value"
+        to: "http://migrated-value.com"
