Use specific git-key for git resource
Signed-off-by: Derek Richard <drichard@pivotal.io>

--- a/ci/pipelines/example-product.yml
+++ b/ci/pipelines/example-product.yml
@@ -18,7 +18,7 @@ resources:
 - name: ops-manager-example
   type: git
   source:
-    private_key: {{installation-git-key}}
+    private_key: {{ops-manager-example-git-key}}
     branch: master
     uri: git@github.com:pivotal-cf-experimental/ops-manager-example.git
 - name: generated-example-product
